<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_application_id">354697031610850</string>
    <string name="fb_login_protocol_scheme">fb354697031610850</string>
    <string name="app_name">Credo</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Current Location</string>
    <string name="flag_description">Country Flag</string>
    <string name="search_settings">Search Country Names</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="search_label">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="title_activity_pick_location">PickLocationActivity</string>
    <string name="select_location">Select Location</string>
    <string name="title_activity_object_list">ObjectList</string>
    <string name="loadmore">Loading more items please wait&#8230;</string>
    <string name="delete_image">Delete ImageView</string>
    <string name="imageview">ImageView</string>
    <string name="title_activity_detailed_object">DetailedObjectActivity</string>
    <string name="action_settings">Settings</string>
    <string name="school_description">Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id lobortis convallis, tortor risus dapibus augue, vel accumsan tellus nisi eu orci. Mauris lacinia sapien quis libero.</string>
    <string name="website">Website</string>
    <string name="rating_credability">weighted average based on user creadability on Credo</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_view_pager_example">ViewPagerExampleActivity</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_profile">Profile</string>
    <string name="tag_line">Learning Begins Here</string>
    <string name="header_name">Name</string>
    <string name="header_email">Email</string>
    <string name="tag_line_home">Showing a selection of sponsored content and recomendations for you</string>
    <string name="welcome_message">Welcome ! Here are some recomendations for you</string>
    <string name="image_trans">image_transition</string>
    <string name="image">image</string>
    <string name="desc">Being the savage\'s bowsman, that is, the person who pulled the
    bow-oar in his boat. Dolor sit amet.</string>
    <string name="italic">Friday 12 FEB.</string>
    <string name="duplicate">DUPLICATE</string>
    <string name="schedule">SCHEDULE</string>
    <string name="delete">DELETE</string>
    <string name="email">Email*</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="str_all_selected">All categories</string>
    <string name="rating_review_text"><font size="10">Tips on writing a great review \n• Not too short, not too long: Written reviews must be limited to 100 to 500 words.\n• Be sincere: We welcome your honest opinion about the product--positive or negative. We do not remove reviews because they are critical. We believe all helpful information can inform our customers’ buying decisions. \n• Full disclosure: If you received a free product in exchange for your review, please clearly and conspicuously disclose that that you received the product free of charge.</font></string>
    <string name="review_text_sample">With exams approaching, it\'s a good idea to review your class notes. He reviews films for the local newspaper. Your starting salary is £13 000 per annum and will be reviewed annually. The laws governing the possession of firearms are being reviewed. The company is reviewing its security after the robbery.</string>
    <string-array name="categories_titles">
        <item>All categories</item>
        <item>Pre School</item>
        <item>Primary School</item>
        <item>Secondary School</item>
        <item>Music Schools</item>
        <item>Boarding Schools</item>
        <item>Sports Schools</item>
        <item>Other</item>
    </string-array>
    <string-array name="filters">
        <item>category</item>
        <item>board</item>
        <item>gender</item>
        <item>facilities</item>
        <item>sports</item>
        <item>extraCurricular</item>
        <item>genres</item>
        <item>subjects</item>
        <item>classes</item>
    </string-array>
    <string name="category">Category</string>
    <string name="gender">Gender</string>
    <string-array name="sports">
        <item>Badminton (Outdoor)</item>
        <item>Badminton (Indoor)</item>
        <item>Tennis (Grass Court)</item>
        <item>Tennis (Clay Court)</item>
        <item>Tennis (Hardcourt)</item>
        <item>Table Tennis</item>
        <item>Squash</item>
        <item>Baseball</item>
        <item>Cricket</item>
        <item>Football</item>
        <item>Basketball (Indoor)</item>
        <item>Basketball (Outdoor)</item>
        <item>Volleyball</item>
        <item>Rugby</item>
        <item>Field Hockey</item>
        <item>Ice Hockey</item>
        <item>Fencing</item>
        <item>Archery</item>
        <item>Swimming</item>
        <item>Water Polo</item>
        <item>Golf</item>
        <item>Horse Ridding</item>
        <item>Polo</item>
        <item>Angling</item>
        <item>Rock Climbing</item>
        <item>Track and Field</item>
        <item>Skating</item>
        <item>Cycling</item>
        <item>Rowing / Sailing</item>
        <item>Skiing</item>
        <item>Gymnastics</item>
        <item>Aerobics / Yoga / Cheerleading</item>
        <item>Martial Arts</item>
        <item>Boxing</item>
        <item>Wrestling</item>
        <item>Weightlifting</item>
        <item>Billiards / Snooker / Pool</item>
        <item>Rifle shooting</item>
        <item>Chess</item>
        <item>Carom</item>
        <item>Paintball</item>
        <item>Splash Pool</item>
        <item>Play Field</item>
    </string-array>
    <string name="extracurricular">Extracurricular Activities Done Here</string>
    <string name="board">Board</string>
    <string name="facilities">Facilities Provided Here</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="description">Description*</string>
    <string name="user_description">It\'s nice to share brief about yourself.</string>
    <string name="title_activity_review_details">ReviewDetailsActivity</string>
    <string name="comment_description">Tap here to comment !</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string-array name="stepLabels">
        <item>Approval</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Delivery</item>
    </string-array>
    <string name="add_place_description">Fill all the details regarding the place.</string>
    <string name="place_name">Name*</string>
    <string name="place_type">Choose Place Type</string>
    <string name="choose_category">Choose Categories</string>
    <string name="facilities_offered">Choose Facilities Offered</string>
    <string name="title_activity_category_wise">CategoryWiseActivity</string>
    <string name="choose_categories">Choose Categories Below</string>
    <string name="top_results">Top Schools</string>
    <string name="not_found_main_text">Sorry we couldn\'t find any matches</string>
    <string name="not_found_secondary_text">Maybe your search was too specific, please try searching with another term.</string>
    <string name="places_bookmarked">Bookmarked Places</string>
    <string name="place_reviewed">Experiences Shared</string>
    <string name="your_followers">Followers</string>
    <string name="your_following">Following</string>
    <string name="your_place">Places Managed</string>
    <string name="title_activity_school_detail">SchoolDetailActivity</string>
    <string name="custom_gallery">Choose Photos</string>
    <string name="edit_home_text">Click to edit name and description here.</string>
    <string name="call">Call</string>
    <string name="place_reviewed_school">Reviews By People</string>
    <string-array name="gender_cat">
        <item>Male</item>
        <item>Female</item>
        <item>Not Specified</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="mobile">Mobile*</string>
    <string name="describe_your_place">Describe your place</string>
    <string name="country">Country*</string>
    <string name="state">State*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City*</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="choose_location_guide">Please tap to select address for your place. Its always better to use google location service instead of typing.</string>
    <string name="name">Name*</string>
    <string name="choose_name_guide">Please provide name of this place.</string>
    <string name="add_more_pics_guide">You can add more pics here !</string>
    <string name="add_cover_photo">Add Cover Photo</string>
    <string name="adding_cover_pic_guide">Adding photos to the place is helpful in attracting audience. Cover pic is mandatory !</string>
    <string name="add_photo">Add Photo</string>
    <string name="clear">Clear</string>
    <string name="type">Type</string>
    <string name="edit">Edit</string>
    <string name="email_hint">Email</string>
</resources>