<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <EditText
        android:id="@+id/userEmailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_near_me_green"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_password_open"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/colorSecondaryText"
        android:textSize="15sp" />

</LinearLayout>