<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.credolabs.justcredo.newplace.AddPhotosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/tag_line"
        android:background="@drawable/card"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/adding_cover_pic_guide"/>


            <ImageView
                android:id="@+id/cover_image"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

        <Button
            android:id="@+id/add_cover_school"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textSize="12sp"
            android:text="@string/add_cover_photo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/card"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/add_more_pics_guide"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/linearLayoutEdit">
        <Button
            android:id="@+id/add_photos_school"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textSize="12sp"
            android:text="@string/add_photo"/>

        <Button
            android:id="@+id/btnClearImages"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textSize="12sp"
            android:text="@string/clear"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
