<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:padding="10dp"
    android:background="@color/colorIcons">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:padding="10dp"
        android:id="@+id/btn_edit_type"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/category_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_category"
            android:layout_marginBottom="10dp"
            android:text="@string/category"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:id="@+id/gender"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/type"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryText"
            />
    </LinearLayout>



</LinearLayout>